deploy/1.20/control-plane/ingress/nginx/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: keycloak
  name: cno-auth
spec:
  ingressClassName: nginx
  rules:
  - host: cno-auth.cno-dev.gocno.io
    http:
      paths:
      - backend:
          service:
            name: keycloak
            port:
              number: 8080
        path: /
        pathType: Prefix
