deploy/1.20/control-plane/ingress/nginx/notification-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: cno-notification
  name: cno-notification
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - cno-notification.INGRESS_DOMAIN
  rules:
  - host: cno-notification.cluster.beopenit.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: cno-notification
            port:
              number: 3000
