deploy/1.20/control-plane/ingress/nginx/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  labels:
    app: cno-ui
  name: cno-ui
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - cno.cno-dev.gocno.io
  rules:
  
    secretName: cno-test-com-tls
  - host: cno-ui.cluster.beopenit.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: cno-ui
            port:
              number: 80
